--- a/src/components/layout/BaseLayout.astro
+++ b/src/components/layout/BaseLayout.astro
@@ -46,6 +46,9 @@ const { title, description, image = "/default-og-image.jpg", canonicalURL = Astr
     <link rel="preload" href={robotoMonoRegularWoff2} as="font" type="font/woff2" crossorigin="anonymous" />
 
     <link rel="canonical" href={canonicalURL} />
+    
+    <!-- RSS Feed Auto Discovery -->
+    <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="/rss.xml" />
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content={Astro.url} />
