--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -75,12 +75,12 @@ main {
   }
 
   .nav-container {
-    padding: 0 1rem;
+    padding: 0 20px;
   }
 
   article, section, .content, .container {
-    padding-left: 1.5rem !important;
-    padding-right: 1.5rem !important;
+    padding-left: 20px !important;
+    padding-right: 20px !important;
   }
 }
 
