--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -216,8 +216,8 @@ const formatDate = (date: Date) => {
   }
 
   @media (max-width: 640px) {
-    main {
-      padding: 1rem;
+    .post {
+      padding: 0 20px;
     }
 
     .post-nav {
