--- a/src/components/layout/BaseLayout.astro
+++ b/src/components/layout/BaseLayout.astro
@@ -63,6 +63,7 @@ const { title, description, image = "/default-og-image.jpg", canonicalURL = Astr
     <meta property="twitter:image" content={image} />
 
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <meta name="generator" content={Astro.generator} />
     <ClientRouter />
     <ViewTransitions />
